fixes bug 190988 "hang when displaying image attachments" r/sr=sspitzer a=asa